fix: updated asciidoctor jvm arguments to build.gradle; user tasks.register in build.gradle of doc/